# airflow-net

./: .gitignore  Makefile  README.md  analyse_tokens.py  analyze_tokens.py  changelog.md  dataset_card.md  finetune.ipynb  finetune_clean.ipynb  pyproject.toml  requirements.txt  start_llamaserver.sh  start_server_parallel.sh  status.md  target.md
config/: generation_config.yaml  mining_config.yaml
datasets/: dataset_card.md
datasets/eval/: dag_validation_report.csv  generated_dags_llamacpp.jsonl  generated_dags_parallel.jsonl  (+2 more)
docs/: 01_research_process.md  02_evaluation_methodology.md  03_inference_benchmarks.md  EVALS.md  inference.md  performance_evaluation.md
inference/: build_benchmarks.sh  build_llamaserver.sh  dataset_statistics.md  performance_evaluation.md  run_benchmarks.sh  start_server_finetuned.sh  start_server_parallel.sh
lib/: config_loader.py  dag_miner.py  dag_parser.py  instruction_generator.py
notebooks/: colab_inference.ipynb  model_evaluation.ipynb
research/: README.md  __init__.py
scripts/: README.md  airflow_dag_miner.py  airflow_instructions_dataset.jsonl  airflow_instructions_dataset_stats.json  claude_instruction_generator_fast.py  dag_generation_llamacpp.py  dag_generation_llamacpp_old.py  optimization_strategies.md  prepare_and_upload_dataset.py  run_dag_mining.py  run_dag_mining_example.py  run_dag_validation.py  run_instruction_generation.py  run_instruction_generation_example_improved.py  run_magpie_dataset_creation.py  simple_dags_dataset.summary.json  simple_dags_dataset_20251126_164545.summary.json  speed_comparison.md
(+53 files in other folders)
