[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-net"
version = "0.1.11"
description = "Reasoning agent for generating and validating Airflow DAGs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python[server]>=0.3.16",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "mcp>=0.1.0",
    "requests>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "numpy<2.0.0",
    "huggingface_hub>=0.19.0"
]

[project.optional-dependencies]
research = [
    "datasets>=2.15.0",
    "huggingface_hub>=0.19.0",
    "PyYAML>=6.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "matplotlib",
    "seaborn"
]

[project.scripts]
airflow-net = "airflow_net.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_net", "research"]
